plugins {
    id 'fabric-loom' version '1.17-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    // Modrinth Maven
    maven { url = "https://api.modrinth.com/maven" }
    // MixinSquared
    maven { url = "https://maven.bawnorton.com/releases" }
    // Sponge / Mixin
    maven { url = "https://repo.spongepowered.org/repository/maven-public/" }
    // Fzzy Maven
    maven { url = "https://maven.fzzyhmstrs.me/" }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // Fzzy Config
    modImplementation "me.fzzyhmstrs:fzzy_config:${project.fzzyConfigVersion}"

    // Neat
    modImplementation "maven.modrinth:neat:${project.neatVersion}"
    modImplementation "maven.modrinth:cloth-config:${project.clothConfigVersion}"

    // Eternal Nether
    //modImplementation "maven.modrinth:eternal-nether:${project.eternalNetherVersion}"
    //modImplementation "maven.modrinth:puzzles-lib:${project.puzzlesLibVersion}"
    //modImplementation "maven.modrinth:forge-config-api-port:${forgeConfigApiPortVersion}"

    // Superb Steeds
    modImplementation "maven.modrinth:superb-steeds:${project.superbSteedsVersion}"

    // Mixin Squared (library)
    include(implementation(annotationProcessor("com.github.bawnorton.mixinsquared:mixinsquared-fabric:0.3.7-beta.1")))

    // Mixin Extras (library)
    implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.5.3"))
    include("io.github.llamalad7:mixinextras-fabric:0.5.3:slim")
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}

// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {}
}